  [-] Full text search in file archive of messages in certain cases worked not correctly
  [-] Proxy authorization in certain cases was not working
  [-] The application will fail if the server terminates the connection before the user enters the password
  [-] In very rare cases renaming, moving and copying of nested groups not working correctly


v1.2.0
------
  [!] Added new plugin for notifications about birthdays
  [!] Added new plugin for loading data from custom types of URLs
  [!] Added new plugin for exchanging roster contacts
  [+] Added ability to show a minimized window with the message when notification received
  [+] Added date separators in chat windows and conferences
  [+] Added ability to remove transpots with their contacts from roster
  [*] Notice of user activity in the chat duplicated on the chat tab
  [*] Added new types of notifications and changed the way of their settings
  [*] Added context menu for tabs in tabwindow
  [*] Search for contact-list starts automatically, just start typing the word
  [*] Added ability to rename contacts and groups directly in the contact list
  [*] Added ability to execute operations on multiple items in roster
  [*] Notification of request for authorization is now deleted automatically in case of confirmation or removal of authorization from another resource
  [*] Added support for transferring files via SOCKS5 in conferences
  [*] Added animation support in SimpleMessageStyles and notification pop-ups
  [*] Added ability to specify environment variables in the resource
  [*] Improved and optimized work with message archive
  [-] XML parser did not correctly handle the elements with not declared prefixes, which caused to the breaking the connection
  [-] Fixed bug in Digest-MD5 authorization for which was not possible to log on some servers
  [-] When leaving the hidden conferences also closed the conference on non-active tabs
  [-] In the history view could appear duplicates of conversations